--- a/Diplomka/css/style.css
+++ b/Diplomka/css/style.css
@@ -4,34 +4,532 @@
 
 @import "header.css";
 @import "footer.css";
+
 /* =============================================== */
 .slider-girl {
+    color: white;
 }
+
 .slider-preview {
+    position: relative;
 }
-.swiper {
+.slider__preview-wrapper {
+    padding-bottom: 130px;
 }
-.slider-preview__wrapper {
+
+.slider__preview-slide img {
+    width: 100%;
+    height: 100%;
 }
-.swiper-wrapper {
-}
-.slider-preview__slide {
-}
+
 .swiper-slide {
+    position: relative;
 }
-.slider-preview__pagination {
+
+.slider__preview-inner {
+    max-width: 439px;
+    max-height: 455px;
+    position: absolute;
+    bottom: 29%;
+    left: 17%;
+    transition: var(--transition);
 }
-.swiper-pagination {
+
+.slider__preview-inner-text {
+    font-size: 32px;
+    font-weight: 500;
+    padding-bottom: 40px;
 }
-.slider-preview__next {
+
+.slider__preview-inner-title {
+    font-size: 78px;
+    font-weight: 800;
+    padding-bottom: 40px;
 }
-.swiper-button-next {
+
+.slider__preview-inner-link {
+    background: white;
+    border-radius: 8px;
+    color: var(--black-text);
+    font-size: 24px;
+    font-weight: 700;
+    padding: 16px 72px;
+    transition: var(--transition);
 }
-.slider-preview__prev {
-}
-.swiper-button-prev {
+.slider__preview-inner-link:hover {
+    font-size: 28px;
 }
 
 
+.slider-preview .swiper-pagination-bullet {
+    background: white;
+    width: 62px;
+    border-radius: 0;
+    margin: 0 1px !important;
+}
+
+.slider-preview .swiper-pagination-bullet:first-child {
+    border-radius: 8px 0 0 8px;
+}
+.slider-preview .swiper-pagination-bullet:last-child {
+    border-radius: 0 8px 8px 0;
+}
+
+.slider__preview-pagination {
+    position: absolute;
+    bottom: 17% !important;
+}
+
+.slider__preview-next,
+.slider__preview-prev{
+    z-index: 1;
+    background: transparent;
+    position: absolute;
+    top: 37%;
+    padding: 0 15px;
+}
+
+.slider__preview-next {
+    right: 0;
+}
+.slider__preview-prev {
+    left: 0;
+    transform: rotate(-180deg);
+}
 
 /* =============================================== */
+.sale {}
+
+.sale__inner {
+    color: white;
+    display: flex;
+    gap: 30px;
+    padding-bottom: 100px;
+}
+
+.sale__inner-image {
+    border-radius: 12px;
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    box-shadow: 2px 2px 10px 0px #00000066;
+}
+
+.sale__inner-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.sale__inner-text {
+    max-height: 243px;
+    position: absolute;
+    bottom: 37%;
+    left: 5%;
+}
+
+.sale__inner-upper-title {
+    padding: 67px 0 24px 0;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 800;
+}
+
+.sale__inner-title {
+    font-family: "Core Sans C 75";
+    font-size: 34px;
+    font-weight: 800;
+    padding-bottom: 10px;
+    max-width: 264px;
+}
+
+.sale__inner-discount {
+    font-size: 16px;
+    font-weight: 500;
+    padding-bottom: 42.5px;
+}
+
+.sale__inner-link {
+    font-family: "Core Sans C 75";
+    font-size: 20px;
+    font-weight: 800;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-thickness: 3px;
+    transition: var(--transition);
+}
+.sale__inner-link:hover {
+    font-size: 22px;
+}
+
+/* =============================================== */
+.collection {
+    display: flex;
+    align-items: center;
+    color: var(--black-text);
+    font-size: 34px;
+    font-weight: 600;
+}
+.collection p {
+    padding-left: 20px;
+}
+
+.collection-slider {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+}
+.collection__wrapper {
+    padding: 70px 28px 100px 35px;
+}
+
+.collection__slide-text {
+    color: var(--black-text);
+    font-size: 20px;
+    font-weight: 700;
+    padding-top: 33px;
+}
+
+
+.collection__prev,
+.collection__next {
+    background: transparent;
+    position: absolute;
+    top: 46%;
+    z-index: 1;
+}
+.collection__prev {
+    left: 0;
+    transform: rotate(-180deg);
+}
+.collection__next {
+    right: 0;
+}
+
+/* ============================================ */
+.saving {
+    color: var(--black-text);
+}
+.saving__inner {
+    display: flex;
+    flex-direction: column;
+    gap: 20px 20px;
+    padding: 70px 0 100px 0;
+}
+.saving__flex {
+    display: flex;
+    gap: 20px;
+}
+.saving__flex-big {
+    display: flex;
+    gap: 20px;
+}
+.saving__item {
+    position: relative;
+}
+.saving__item--white {
+    color: white;
+}
+.saving__item--white path{
+    stroke: white;
+}
+.saving__item--white .saving__button{
+    border: 1px solid  var(--general-bg);
+}
+
+.saving__img {
+    width: 100%;
+    height: 100%;
+}
+.saving__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 40px 0;
+    position: absolute;
+    top: 0;
+    right: 20px;
+}
+.saving__text--left {
+    right: 220px;
+}
+
+.saving__title {
+    max-width: 120px;
+    font-size: 28px;
+    font-weight: 600;
+}
+.saving__info {
+    font-size: 14px;
+    font-weight: 600;
+}
+.saving__discount {
+    font-size: 18px;
+    font-weight: 700;
+}
+.saving__arrow {
+    margin: 35px 0;
+    align-self: center;
+}
+.saving__button {
+    display: flex;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    max-width: 132px;
+    border: 1px solid  var(--black-text);
+    border-radius: 8px;
+    padding: 10px 25px;
+    font-size: 12px;
+    font-weight: 600;
+    transition: var(--transition);
+}
+.saving__button:hover {
+    font-size: 13px;
+}
+/* ================================================== */
+
+.fashion {
+}
+.fashion__inner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 100px;
+}
+.fashion__inner img {
+    width: 100%;
+    height: 100%;
+}
+.fashion__info {
+    display: flex;
+    justify-content: center;
+    color: var(--general-bg);
+    position: relative;
+}
+.fashion__text {
+    max-width: 440px;
+    position: absolute;
+    top: 25%;
+}
+.fashion__title {
+    font-family: Causten;
+    font-size: 34px;
+    font-weight: 400;
+}
+.fashion__paragraph {
+    font-size: 20px;
+    padding-bottom: 50px;
+}
+.fashion__button {
+    background: white;
+    border-radius: 8px;
+    color: var(--black-text);
+    font-size: 18px;
+    font-weight: 600;
+    padding: 12px 44px;
+    transition: var(--transition);
+}
+.fashion__button:hover {
+    font-size: 20px;
+}
+.fashion__img {
+}
+/* ================================ */
+
+.formen {
+}
+.formen__inner {
+    padding: 70px 0 100px 0;
+    display: grid;
+    gap: 50px 50px;
+    grid-template-columns: repeat(4, 1fr); 
+}
+.formen__item {
+
+}
+.formen__img {
+    max-width: 270px;
+    max-height: 393px;
+    width: 100%;
+    height: 100%;
+}
+.formen__info {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
+.formen__info:hover {
+    border-bottom: solid 1px var(--grey-text);
+    
+}
+.formen__text {
+}
+.formen__title {
+    font-family: Causten;
+    font-size: 18px;
+    font-weight: 700;
+}
+.formen__under-title {
+    color: #7f7f7f;
+    font-size: 13.5px;
+    font-weight: 500;
+}
+.formen__link {
+    padding: 10px 0px 20px 30px;
+}
+/* ======================================== */
+
+.brends {
+}
+.brends__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 12px;
+    background: var(--black-text);
+    margin-bottom: 80px;
+}
+.brends__text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.brends__title {
+    font-size: 50px;
+    padding: 44px 0 26px 0;
+}
+.brends__subtitle {
+    font-size: 22px;
+    font-weight: 400;
+    padding-bottom: 67px;
+}
+.brends__subtitle span {
+    color: #FBD103;
+}
+.brends__list {
+    padding-bottom: 60px;
+    display: flex;
+    gap: 25px;
+}
+.brends__item {
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    max-width: 177px;
+    max-height: 85px;
+}
+.brends__icon {
+    padding: 30px 30px;
+}
+/* ============================================ */
+.limelight {
+}
+.limelight__inner {
+    padding: 70px 0 100px 0;
+    display: grid;
+    gap: 35px 35px;
+    grid-template-columns: repeat(4, 1fr); 
+}
+.limelight__item {
+    position: relative;
+}
+.limelight__img {
+    max-width: 282px;
+    max-height: 370px;
+    width: 100%;
+    height: 100%;
+}
+.limelight__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--general-bg);
+    padding: 8px 8px;
+    border-radius: 50%;
+    position: absolute;
+    top: 3%;
+    right: 6%;
+    transition: var(--transition);
+}
+.limelight__icon:hover {
+    background: #8A33FD;
+}
+.limelight__icon:hover path{
+    stroke: white;
+}
+.limelight__icon path {
+    transition: var(--transition);
+    stroke: black;
+}
+.limelight__link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 15px;
+}
+.limelight__text {
+    max-width: 164px;
+    white-space: nowrap;
+}
+.limelight__title {
+    font-size: 16px;
+    font-weight: 600;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.limelight__subtitle {
+    color: var(--grey-text);
+    font-size: 14px;
+}
+.limelight__price {
+    font-size: 14px;
+    font-weight: 700;
+}
+/* ==================================== */
+
+.feedback__wrapper {
+    padding: 70px 0 100px 0;
+}
+.feedback__slide {
+}
+.feedback__slide-inner {
+    overflow: hidden;
+    padding: 23px 23px;
+    border: 1.8px solid #bebcbd;
+    border-radius: 10px;
+}
+.feedback__person {
+    display: flex;
+    justify-content: space-between;
+}
+.feedback__slide-img {
+}
+.feedback__slide-rating {
+}
+.feedback__slide-text {
+}
+.feedback__slide-name {
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 22px;
+    padding: 20px 0;
+}
+.feedback__slide-info {
+    overflow: hidden;
+    color: var(--grey-text);
+    font-size: 14px;
+    font-weight: 400;
+    height: 125px;
+}
+.feedback__pagination {
+    bottom: 15% !important;
+}
+.feedback__pagination .swiper-pagination-bullet{
+    background: var(--black-text);
+}
+
