--- a/Diplomka/css/global.css
+++ b/Diplomka/css/global.css
@@ -2,7 +2,20 @@
     --general-bg: #ffffff;
     --black-text: #3C4242;
     --grey-text: #807D7E;
+    --light-gray: #BEBCBD;
+    --dark-white: #EDEEF2;
+    --purple: #8A33FD;
     --transition: all .4s;
+    /* ================  font-size adaptive  */
+    --twenty-twofz: calc(16px + 6 * (100vw / 1440));
+    --fifty: calc(20px + 30 * (100vw/1440));
+    --sixteen: calc(12px + 4 * (100vw / 1440));
+    --thirty-four: calc(22px + 12 * (100vw / 1440));
+    --seventy-eight: calc(30px + 48 * (100vw / 1440));
+    --eighteen: calc(12px + 6 * (100vw / 1440));
+    --twenty: calc(14px + 6 * (100vw / 1440));
+    --twenty-eight: calc(18px + 10 * (100vw / 1440));
+    --fourteen: calc(10px + 4 * (100vw / 1440));
 }
 
 .body {
@@ -30,11 +43,119 @@
     flex-grow: 1;
 }
 
+.burger-icon {
+    z-index: 12;
+    display: none;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.burger-icon span,
+.burger-icon span::before,
+.burger-icon span::after {
+    display: block;
+    width: 30px;
+    height: 3px;
+    border-radius: 8px;
+    background: var(--black-text);
+}
+
+.burger-icon span {
+    position: relative;
+}
+.burger-icon span::before,
+.burger-icon span::after {
+    content: '';
+    position: absolute;
+}
+
+.burger-icon span::before {
+    top: -8px;
+}
+.burger-icon span::after {
+    bottom: -8px;
+}
+.body--opened-menu .burger-icon span {
+    background: transparent;
+}
+.body--opened-menu .burger-icon span::before {
+    top: 0;
+    transform: rotate(45deg);
+}
+.body--opened-menu .burger-icon span::after {
+    bottom: 0;
+    transform: rotate(-45deg);
+}
+.body--opened-menu {
+    overflow: hidden;
+}
+
+
+.button-primary {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    background: var(--purple);
+    width: 100%;
+    height: 100%;
+    transition: all .4s;
+
+    &:hover {
+        box-shadow: 0px 3px 4px 0px #0000001a;
+        background: #6620c1;
+    }
+    &:active {
+        background: #6620c1;
+    }
+}
+.button-sec {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--purple);
+    border: 1px solid var(--black-text);
+    background: #6620c108;
+    border-radius: 8px;
+    width: 100%;
+    height: 100%;
+    transition: all .4s;
+
+    &:hover {
+        border: 1px solid var(--black-text);
+    }
+    &:active {
+        border: 1px solid var(--purple);
+    }
+}
+.button-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #6620c108;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    width: 100%;
+    height: 100%;
+    transition: all .4s;
+
+    &:hover {
+        box-shadow: 0px 3px 4px 0px #0000001a;
+        background: #6620c108;
+    }
+    &:active {
+        box-shadow: 0px 0px 0px 0px transparent;
+    }
+}
+
 .footer {
     font-family: Causten;
     color: #F6F6F6;
     background: var(--black-text);
     font-weight: 500;
-    font-size: 18px;
+    font-size: var(--eighteen);
     /* line-height: 2.16; */
 }
