--- a/Diplomka/css/style.css
+++ b/Diplomka/css/style.css
@@ -26,7 +26,7 @@
 }
 
 .slider__preview-inner {
-    max-width: 490px;
+    max-width: 620px;
     max-height: 455px;
     position: absolute;
     top: 15%;
@@ -36,13 +36,13 @@
 }
 
 .slider__preview-inner-text {
-    font-size: 2.5vw;
+    font-size: clamp(10px, 2.5vw, 55px);
     font-weight: 500;
     padding-bottom: 3vw;
 }
 
 .slider__preview-inner-title {
-    font-size: 6vw;
+    font-size: clamp(20px, 5.6vw, 130px);
     padding-bottom: 2vw;
     line-height: 7vw;
 }
@@ -51,7 +51,7 @@
     background: white;
     border-radius: 8px;
     color: var(--black-text);
-    font-size: 1.5vw;
+    font-size: clamp(8px, 2vw, 36px);
     font-weight: 700;
     width: 17.5vw;
     height: 4.3vw;
@@ -59,8 +59,8 @@
 
 .slider-preview .swiper-pagination-bullet {
     background: white;
-    width: 4.4vw;
-    height: .6vw;
+    width: clamp(20px, 4.4vw, 100px);
+    height: clamp(3px, 0.6vw, 20px);
     border-radius: 0;
     margin: 0 1px !important;
 }
@@ -84,6 +84,10 @@
     position: absolute;
     top: 37%;
     padding: 0 15px;
+}
+.slider__preview-next svg,
+.slider__preview-prev svg {
+    height: 44px;
 }
 
 .slider__preview-next {
@@ -557,7 +561,24 @@
 
     /* =============================== */
 }
-
+@media (max-width: 2560px) {
+    .container {
+        max-width: 1500px;
+    }
+}
+@media (max-width: 1440px) {
+    .container {
+        max-width: 1270px
+    }
+    .slider__preview-inner {
+        max-width: 410px;
+    }
+}
+@media (max-width: 1100px) {
+    .slider__preview-inner {
+        max-width: 292px;
+    }
+}
 @media (max-width: 1000px) {
     .header__inner {
         justify-content: space-between;
@@ -609,5 +630,9 @@
         max-width: 230px;
     }
 }
-
+@media (max-width: 500px) {
+    .slider__preview-inner {
+        max-width: 125px;
+    }
+}
 
