--- a/Diplomka/css/style.css
+++ b/Diplomka/css/style.css
@@ -106,7 +106,7 @@
     color: white;
     display: flex;
     gap: 3vw;
-    padding: 9vw 0 7vw 0;
+    padding: 5vw 0 7vw 0;;
 }
 
 .sale__inner-image {
@@ -174,7 +174,11 @@
     font-weight: 600;
 }
 .collection p {
-    padding-left: 20px;
+    padding-left: 1.4vw;
+}
+.collection svg  {
+    height: clamp(24px, 2.1vw, 50px);
+    width: clamp(5px, 1vw, 10px);
 }
 
 .collection-slider {
@@ -183,30 +187,52 @@
     overflow: hidden;
 }
 .collection__wrapper {
-    padding: 70px 28px 100px 35px;
+    padding: 5vw 0 7vw 0;
+}
+.collection__slider-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: auto auto;
+}
+.collection__slide {
+
+}
+.collection__slide img {
+    width: 100%;
 }
 
 .collection__slide-text {
     color: var(--black-text);
     font-size: var(--twenty);
     font-weight: 700;
-    padding-top: 33px;
+    padding-top: 2.2vw;
 }
 
-
+.collection__nav {
+    width: 111.3%;
+    position: absolute;
+    top: 40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .collection__prev,
 .collection__next {
     background: transparent;
-    position: absolute;
-    top: 46%;
     z-index: 1;
 }
 .collection__prev {
-    left: 0;
     transform: rotate(-180deg);
 }
 .collection__next {
-    right: 0;
+}
+.collection__prev svg,
+.collection__next svg {
+    height: clamp(10px, 1.3vw, 24px);
+    width: clamp(10px, 1.3vw, 24px);
 }
 
 /* ============================================ */
@@ -217,7 +243,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px 20px;
-    padding: 70px 0 100px 0;
+    padding: 5vw 0 7vw 0;;
 }
 .saving__flex {
     display: flex;
@@ -340,7 +366,7 @@
 .formen {
 }
 .formen__inner {
-    padding: 70px 0 100px 0;
+    padding: 5vw 0 7vw 0;;
     display: grid;
     gap: 50px 50px;
     grid-template-columns: repeat(4, 1fr); 
@@ -432,7 +458,7 @@
 .limelight {
 }
 .limelight__inner {
-    padding: 70px 0 100px 0;
+    padding: 5vw 0 7vw 0;;
     display: grid;
     gap: 35px 35px;
     grid-template-columns: repeat(4, 1fr); 
@@ -495,7 +521,7 @@
 /* ==================================== */
 
 .feedback__wrapper {
-    padding: 70px 0 100px 0;
+    padding: 5vw 0 7vw 0;;
 }
 .feedback__slide {
 }
@@ -644,6 +670,12 @@
     }
     .sale__inner-link {
         text-decoration-thickness: 2px;
+    }
+    .collection__slider-container {
+        max-width: 85%;
+    }
+    .collection__nav {
+        width: 118%;
     }
 }
 
